[package]
name = "poe2openai"
version = "0.7.5"
edition = "2024"
publish = ["crates-io"]
authors = ["Jerome Leong <jeromeleong1998@gmail.com>"]
description = "Poe API to OpenAI API"
repository = "https://github.com/jeromeleong/poe2openai"
license = "MIT"
keywords = ["poeapi", "openai","ai"]

[dependencies]
poe_api_process = { version = "0.4.6", features = ["xml"] }
tokio = { version = "1.48.0", features = ["full"] }
futures-util = "0.3.31"
salvo = { version = "0.85.0", features = ["basic-auth","size-limiter","serve-static","cors"] }
serde = "1.0.228"
serde_json = "1.0.145"
chrono = "0.4.42"
nanoid = "0.4.0"
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
askama = "0.14.0"
serde_yaml = "0.9.34"
tiktoken-rs = "0.9.1"
tempfile = "3.23.0"
base64 = "0.22.1"
regex = "1.12.2"
sled = { version = "0.34.7", features = ["no_logs"] }
sha2 = "0.10.9"
mimalloc = "0.1.48"
